[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/objects/wood-door.png" type="Texture" id=1]
[ext_resource path="res://assets/images/objects/coin.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://objects/CoinDoor.gd" type="Script" id=5]
[ext_resource path="res://objects/coin_door_top_collider.tres" type="Shape2D" id=6]
[ext_resource path="res://objects/coin_door_bottom_collider.tres" type="Shape2D" id=7]
[ext_resource path="res://assets/sounds/door_open.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/door_close.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_local_to_scene = true
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TopCollider:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ), Vector2( 0, -9 ), Vector2( 0, -11 ), Vector2( 0, -13 ), Vector2( 0, -16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BottomCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 0, 9 ), Vector2( 0, 11 ), Vector2( 0, 13 ), Vector2( 0, 16 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TopCollider:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7, 8 ), Vector2( 7, 6 ), Vector2( 7, 4 ), Vector2( 7, 2 ), Vector2( 7, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BottomCollider:shape:extents")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7, 8 ), Vector2( 7, 6 ), Vector2( 7, 4 ), Vector2( 7, 2 ), Vector2( 7, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CoinSprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CostLabel:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="WoodDoor" type="StaticBody2D" groups=[
"money_door",
]]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 5

[node name="TopCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = ExtResource( 6 )

[node name="BottomCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_open = SubResource( 1 )

[node name="CoinSprite" type="Sprite" parent="."]
position = Vector2( 0, 9 )
texture = ExtResource( 2 )
hframes = 4

[node name="CostLabel" type="Label" parent="."]
margin_left = -10.0
margin_top = -13.0
margin_right = 30.0
margin_bottom = -5.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "50"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.2

[node name="DoorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
